[package]
name = "libmosquitto-sys"
version = "0.2.2"
authors = ["Wez Furlong"]
edition = "2018"
links = "mosquitto"
build = "build.rs"
readme = "README.md"
license = "MIT"
description = "Unsafe FFI bindings to libmosquitto"
documentation = "https://docs.rs/libmosquitto-sys"
repository = "https://github.com/wez/mosquitto-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-mosquitto = []
vendored-openssl = ["openssl-sys/vendored", "openssl-sys"]
default = ["vendored-mosquitto", "openssl-sys"]

[dependencies]
openssl-sys = { version="0.9", optional=true }

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
