[package]
name = "mosquitto-rs"
version = "0.6.0"
authors = ["Wez Furlong"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "An async MQTT client based on libmosquitto"
documentation = "https://docs.rs/mosquitto-rs"
repository = "https://github.com/wez/mosquitto-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-mosquitto = ["libmosquitto-sys/vendored-mosquitto"]
vendored-openssl = ["libmosquitto-sys/vendored-openssl"]
default = ["vendored-mosquitto", "libmosquitto-sys/openssl-sys"]

[dependencies]
async-channel = "2.1"
lazy_static = "1.4"
libc = "0.2"
libmosquitto-sys = {version="0.2", path="../libmosquitto-sys", default-features=false }
thiserror = "1.0"

[dev-dependencies]
smol = "1.3"
