[package]
name = "mosquitto-rs"
version = "0.11.0"
authors = ["Wez Furlong"]
edition = "2021"
readme = "README.md"
license = "MIT"
description = "An async MQTT client based on libmosquitto"
documentation = "https://docs.rs/mosquitto-rs"
repository = "https://github.com/wez/mosquitto-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored-mosquitto = ["libmosquitto-sys/vendored-mosquitto"]
vendored-mosquitto-tls = ["libmosquitto-sys/openssl-sys"]
vendored-openssl = ["libmosquitto-sys/vendored-openssl"]
default = ["vendored-mosquitto", "vendored-mosquitto-tls", "router"]
router = ["dep:matchit", "dep:serde_json", "dep:serde", "dep:anyhow"]

[dependencies]
async-channel = "2.1"
lazy_static = "1.4"
libc = "0.2"
libmosquitto-sys = {version="0.2.3", path="../libmosquitto-sys", default-features=false }
matchit = {version="0.8.0", optional=true}
serde_json = {version="1.0", optional=true}
serde = {version="1.0", features=["derive"], optional=true}
thiserror = "1.0"
anyhow = {version="1.0", optional=true}
log = "0.4.20"

[dev-dependencies]
anyhow = "1.0"
smol = "2.0"

# docs.rs-specific configuration
# <https://stackoverflow.com/a/61417700/149111>
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
